2005-07-20  Sven Neumann  <sven@gimp.org>

	* app/config/gimpconfig-dump.c: fixed typo (Debian bug #310018).

2005-07-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-grid.c: declare variables at the start of the
	scope. Apply GIMP coding style to the new polar grid code.

2005-07-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpvectortool.c (gimp_vector_tool_key_press): return
	FALSE if the keypress event isn't handled because the display
	doesn't match.

2005-07-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mng.c (mng_save_image): fixed signedness warnings.

2005-07-19  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/gimprender.[ch]: new files keeping the render
	acceleration check buffers.

	* app/display/gimpdisplayshell-render.[ch]: removed them here.

	* app/gui/gui.c: initialize/shutdown the new buffers.

	* app/widgets/gimpcolormapeditor.c
	* app/widgets/gimpviewrenderer.c
	* app/widgets/gimpviewrenderergradient.c
	* app/actions/view-actions.c
	* app/display/gimpdisplayshell-appearance.c
	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell.c: use the new stuff. Removes
	lots of broken widgets -> display dependencies.

2005-07-19  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolormapeditor.[ch]: renamed member "palette"
	to "preview", cleanup.

2005-07-19  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-actions.c 
	* etc/ps-menurc: changed the default keybinding for Edit->Clear
	from Ctrl-K to Delete (bug #118115).

2005-07-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_menu.c: removed unused include.

2005-07-19  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogrameditor.c: try a different style for the
	info labels below the histogram; mainly to avoid repositioning.

2005-07-18  DindinX  <dindinx@gimp.org>

	* plug-ins/common/gauss.c: don't try to free unallocated space
	(happened when vert or horz were 0.0)

2005-07-18  Sven Neumann  <sven@gimp.org>
